tests/snapshots/sfc/ts/script_setup__generic_component_with_complex_constraint.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 106
expression: ts_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, renderSlot as _renderSlot, withModifiers as _withModifiers } from "vue"

import { defineComponent as _defineComponent } from "vue";
import { ref } from "vue";
const __sfc__ = /*@__PURE__*/ _defineComponent({
  __name: "test",
  props: {
    initialState: {
      type: Object,
      required: true
    },
    onSubmit: {
      type: Object,
      required: true
    }
  },
  setup(__props, { expose: __expose, emit: __emit }) {
    __expose();
    const formData = ref(null);
    const __returned__ = {
      formData,
      ref
    };
    Object.defineProperty(__returned__, "__isScriptSetup", {
      enumerable: false,
      value: true
    });
    return __returned__;
  }
});

export function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("form", {
    onSubmit: _withModifiers(() => {}, ["prevent"])
  }, [
    _renderSlot(_ctx.$slots, "default", { data: $setup.formData })
  ], 40 /* PROPS, NEED_HYDRATION */, ["onSubmit"]))
}

__sfc__.render = render
export default __sfc__
