tests/snapshots/sfc/ts/script_setup__multiple_v_model_bindings_on_component_with_refs.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 106
expression: ts_output
---
import { openBlock as _openBlock, createBlock as _createBlock } from "vue"

import { defineComponent as _defineComponent } from "vue";
import { ref } from "vue";
import Dialog from "./Dialog.vue";
const __sfc__ = /*@__PURE__*/ _defineComponent({
  __name: "test",
  setup(__props, { expose: __expose, emit: __emit }) {
    const isOpen = ref(false);
    const formValue = ref("");
    const __returned__ = {
      Dialog,
      formValue,
      isOpen,
      ref
    };
    Object.defineProperty(__returned__, "__isScriptSetup", {
      enumerable: false,
      value: true
    });
    return __returned__;
  }
});

export function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createBlock($setup.Dialog, {
    modelValue: $setup.isOpen,
    "onUpdate:modelValue": $event => (($setup.isOpen) = $event),
    value: $setup.formValue,
    "onUpdate:value": $event => (($setup.formValue) = $event)
  }, null, 8 /* PROPS */, ["modelValue", "onUpdate:modelValue", "value", "onUpdate:value"]))
}

__sfc__.render = render
export default __sfc__
